--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!--=============== CSS ===============-->
         <link rel="stylesheet" href="assets/css/styles.css">
 
-        <title>Responsive real state website - Bedimcode</title>
+        <title>Realux</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
